infrastructure/k8s/authDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth 
    spec:
      containers:
      - name: auth 
        image: registry.local/ticketing-auth
        ports:
          - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "250Mi"
          requests:
            cpu: "250m"
            memory: "100Mi"


---
apiVersion: v1 
kind: Service 
metadata:
  name: auth-service
spec:
  selector:
    app: auth 
  ports:
    - name: auth 
      protocol: TCP 
      port: 5000
      targetPort: 5000
