infrastructure/k8s/authMongoDeployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: auth-mongo-deployment
  labels:
    app: auth-mongo 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo 
  template:
    metadata:
      labels:
        app: auth-mongo 
    spec:
      containers:
        - name: auth-mongo 
          image: mongo
          resources:
            limits:
              cpu: "500m"
              memory: "250Mi"
            requests:
              cpu: "250m"
              memory: "100Mi"
          
---

apiVersion: v1
kind: Service 
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo 
  ports:
    - name: authmongo 
      protocol: TCP
      port: 27017
      targetPort: 27017
