infrastructure/k8s/ingressService.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  labels:
    name: ticketing-ingress
  namespace: ticketing-microservice
spec:
  ingressClassName: nginx
  rules:
  - host: ticketingmicroservice.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: auth-service
            port: 
              number: 5000
